--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button>00</button>
             <button>0</button>
             <button>.</button>
-            <button class="equal">=</button>
+            <button class="equal" id="equal">=</button>
         </div>
         
     </div>
